// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`freetype2 NewMemoryFace loadChar load something 1`] = `
Object {
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 7,
    "horiAdvance": 5,
    "horiBearingX": 0,
    "horiBearingY": 6,
    "isFontUnits": false,
    "vertAdvance": 12,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 6,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadChar render something 1`] = `
Object {
  "bitmap": Object {
    "buffer": Object {
      "data": Array [
        8,
        0,
        8,
        0,
        56,
        0,
        36,
        0,
        36,
        0,
        94,
        0,
        66,
        0,
        67,
        0,
      ],
      "type": "Buffer",
    },
    "height": 8,
    "numGrays": null,
    "pitch": 2,
    "pixelMode": 1,
    "width": 9,
  },
  "bitmapLeft": 0,
  "bitmapTop": 8,
  "format": 1651078259,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 9,
    "horiAdvance": 9,
    "horiBearingX": 0,
    "horiBearingY": 9,
    "isFontUnits": false,
    "vertAdvance": 12,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 9,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadChar render something 2`] = `
Object {
  "bitmap": Object {
    "buffer": Object {
      "data": Array [
        12,
        24,
        24,
        24,
        15,
        0,
        0,
        0,
        0,
        13,
        138,
        255,
        39,
        62,
        107,
        167,
        28,
        0,
        0,
        51,
        255,
        8,
        0,
        0,
        90,
        238,
        27,
        0,
        48,
        255,
        8,
        0,
        0,
        0,
        205,
        149,
        0,
        48,
        255,
        8,
        0,
        0,
        0,
        142,
        206,
        0,
        48,
        255,
        8,
        0,
        0,
        0,
        147,
        204,
        0,
        48,
        255,
        8,
        0,
        0,
        0,
        206,
        153,
        0,
        63,
        255,
        12,
        0,
        0,
        91,
        242,
        35,
        31,
        178,
        255,
        106,
        56,
        98,
        167,
        36,
        0,
      ],
      "type": "Buffer",
    },
    "height": 9,
    "numGrays": 256,
    "pitch": 9,
    "pixelMode": 2,
    "width": 9,
  },
  "bitmapLeft": 0,
  "bitmapTop": 9,
  "format": 1651078259,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 9,
    "horiAdvance": 9,
    "horiBearingX": 0,
    "horiBearingY": 9,
    "isFontUnits": false,
    "vertAdvance": 12,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 9,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadChar scale metrics 1`] = `
Object {
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 677,
    "horiAdvance": 720,
    "horiBearingX": 5,
    "horiBearingY": 677,
    "isFontUnits": true,
    "vertAdvance": 1000,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 710,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadChar scale metrics 2`] = `
Object {
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 9,
    "horiAdvance": 9,
    "horiBearingX": 0,
    "horiBearingY": 9,
    "isFontUnits": false,
    "vertAdvance": 12,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 9,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph load something 1`] = `
Object {
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 14,
    "horiAdvance": 11,
    "horiBearingX": 0,
    "horiBearingY": 13,
    "isFontUnits": false,
    "vertAdvance": 18,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 13,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph render something 1`] = `
Object {
  "bitmap": Object {
    "buffer": Object {
      "data": Array [
        124,
        0,
        68,
        0,
        68,
        0,
        100,
        0,
        56,
        0,
        88,
        128,
        153,
        0,
        141,
        0,
        134,
        0,
        130,
        0,
        195,
        0,
        124,
        224,
      ],
      "type": "Buffer",
    },
    "height": 12,
    "numGrays": null,
    "pitch": 2,
    "pixelMode": 1,
    "width": 12,
  },
  "bitmapLeft": 1,
  "bitmapTop": 12,
  "format": 1651078259,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 14,
    "horiAdvance": 11,
    "horiBearingX": 0,
    "horiBearingY": 13,
    "isFontUnits": false,
    "vertAdvance": 18,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 13,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph render something 2`] = `
Object {
  "bitmap": Object {
    "buffer": Object {
      "data": Array [
        0,
        0,
        0,
        43,
        73,
        67,
        3,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        90,
        105,
        0,
        59,
        194,
        2,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        207,
        29,
        0,
        0,
        225,
        47,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        203,
        103,
        0,
        10,
        246,
        22,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        123,
        236,
        26,
        116,
        121,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        9,
        220,
        208,
        61,
        0,
        14,
        75,
        76,
        76,
        25,
        0,
        0,
        0,
        69,
        126,
        253,
        133,
        0,
        0,
        42,
        229,
        51,
        0,
        0,
        0,
        95,
        144,
        0,
        131,
        253,
        68,
        0,
        29,
        82,
        0,
        0,
        0,
        26,
        244,
        47,
        0,
        3,
        197,
        232,
        23,
        70,
        1,
        0,
        0,
        0,
        93,
        252,
        2,
        0,
        0,
        31,
        239,
        189,
        60,
        0,
        0,
        0,
        0,
        99,
        255,
        33,
        0,
        0,
        0,
        85,
        255,
        113,
        0,
        0,
        0,
        0,
        39,
        251,
        146,
        0,
        0,
        0,
        45,
        151,
        251,
        78,
        0,
        0,
        7,
        0,
        102,
        244,
        155,
        81,
        95,
        38,
        0,
        112,
        240,
        140,
        83,
        53,
        0,
        0,
        13,
        53,
        27,
        0,
        0,
        0,
        0,
        13,
        55,
        35,
        0,
      ],
      "type": "Buffer",
    },
    "height": 14,
    "numGrays": 256,
    "pitch": 13,
    "pixelMode": 2,
    "width": 13,
  },
  "bitmapLeft": 0,
  "bitmapTop": 13,
  "format": 1651078259,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 14,
    "horiAdvance": 11,
    "horiBearingX": 0,
    "horiBearingY": 13,
    "isFontUnits": false,
    "vertAdvance": 18,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 13,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph scale metrics 1`] = `
Object {
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 705,
    "horiAdvance": 627,
    "horiBearingX": 30,
    "horiBearingY": 691,
    "isFontUnits": true,
    "vertAdvance": 1000,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 672,
  },
  "rsbDelta": 0,
}
`;

exports[`freetype2 NewMemoryFace loadGlyph scale metrics 2`] = `
Object {
  "bitmap": null,
  "bitmapLeft": null,
  "bitmapTop": null,
  "format": 1869968492,
  "lsbDelta": 0,
  "metrics": Object {
    "height": 16,
    "horiAdvance": 6,
    "horiBearingX": 0,
    "horiBearingY": 13,
    "isFontUnits": false,
    "vertAdvance": 18,
    "vertBearingX": 0,
    "vertBearingY": 0,
    "width": 5,
  },
  "rsbDelta": 0,
}
`;
